* TO DO: Update the `runtime` list to include times for `cv` and `baselearning`.  These were dropped in version 0.0.5.
* TO DO: Added new function `h2o.recombine` which allows the user to easily re-fit the metalearner using a new metalearning algorithm.
* TO DO: Added new functions, `h2o.saveEnsemble` and `h2o.loadEnsemble`, for easy saving and loading of ensemble models to disk.


h2oEnsemble 0.0.8 (2015-10-07)
----------------
* Added support for the `col_sample_rate` and `sample_rate` arguments in the GLM wrapper.


h2oEnsemble 0.0.7 (2015-10-04)
----------------
* Added backward compatibility for `h2o` package with the data frame class name with "H2OFrame".  Temporarily on master, the `h2o` package is using a data frame class with name "Frame" (Rapids integration).


h2oEnsemble 0.0.6 (2015-09-28)
----------------
* Add support for new distribution/family arg in `h2o.gbm` and `h2o.glm`.
* Made some adjustments to the internals of the `h2o.ensemble` function to become compatible with the "Rapids" integration in the `h2o` package.


h2oEnsemble 0.0.5 (2015-08-10)
----------------
* Added full support for `h2o.*` metalearning functions (data is no longer pulled into R). Previously, we pulled the `Z` matrix into R memory in order to be able to make use of SuperLearner-based metalearning functions, but this is no longer the default functionality.  We still pull the `Z` matrix into R memory if a SL-based metalearner is specified, however.  Using SL-based metalearners is suboptimal from a memory management perspective and may be deprecated in the future.  
* Re-wrote the backend of `h2o.ensemble` such the `Z` matrix of cv-pred values from the base learners to stay entirely within the H2O cluster using the recently updated cross-validation capabilities of the h2o base learner functions.
* Updated many of the wrapper functions to include newly implemented arguments.