@@ -1,11 +1,11 @@
 Package: h2oEnsemble
 Type: Package
 Title: H2O Ensemble Learning
-Version: 0.0.8
-Date: 2015-10-07
+Version: 0.0.8.9000
+Date: 2015-10-19
 Author: Erin LeDell
 Maintainer: Erin LeDell <erin@h2o.ai>
-Description: This package implements the Super Learner ensemble (stacking) algorithm using the H2O R interface to provide base learning algorithms.   
+Description: H2O Ensemble implements the Super Learner ensemble (stacking) algorithm using the H2O R interface to provide base learning algorithms.   
 License: Apache License (== 2.0)
 Depends: R (>= 2.13.0), h2o (>= 3.2.0)
 NeedsCompilation: no
