@@ -2,3 +2,5 @@ exportPattern("^[[:alpha:]]+")
 
 import(h2o)
 import(parallel)
+
+S3method(predict, h2o.ensemble)
