@@ -98,7 +98,8 @@ h2o.deeplearning.wrapper <- function(x, y, training_frame, model_id = "",
                                      autoencoder = FALSE, use_all_factor_levels = TRUE,
                                      activation = c("Rectifier", "Tanh", "TanhWithDropout",
                                                    "RectifierWithDropout", "Maxout", "MaxoutWithDropout"), 
-                                     hidden = c(200, 200), epochs = 10, train_samples_per_iteration = -2, seed, 
+                                     hidden = c(200, 200), epochs = 10, train_samples_per_iteration = -2, 
+                                     target_ratio_comm_to_comp = 0.05, seed, 
                                      adaptive_rate = TRUE, rho = 0.99, epsilon = 1e-08, rate = 0.005,
                                      rate_annealing = 1e-06, rate_decay = 1, momentum_start = 0,
                                      momentum_ramp = 1e+06, momentum_stable = 0,
@@ -129,7 +130,7 @@ h2o.deeplearning.wrapper <- function(x, y, training_frame, model_id = "",
                    autoencoder = autoencoder, use_all_factor_levels = use_all_factor_levels, 
                    activation = match.arg(activation), 
                    hidden = hidden, epochs = epochs, train_samples_per_iteration = train_samples_per_iteration, 
-                   seed = seed, 
+                   target_ratio_comm_to_comp = target_ratio_comm_to_comp, seed = seed, 
                    adaptive_rate = adaptive_rate, rho = rho, epsilon = epsilon, rate = rate,
                    rate_annealing = rate_annealing, rate_decay = rate_decay, momentum_start = momentum_start,
                    momentum_ramp = momentum_ramp, momentum_stable = momentum_stable, 
