@@ -6,14 +6,14 @@
 H2O Ensemble Package
 }
 \description{
-This package implements the Super Learner ensemble (stacking) algorithm using the H2O R interface to provide base learning algorithms. 
+H2O Ensemble implements the Super Learner ensemble (stacking) algorithm using the H2O R interface to provide base learning algorithms. 
 }
 \details{
 \tabular{ll}{
 Package: \tab h2oEnsemble\cr
 Type: \tab Package\cr
-Version: \tab 0.0.8\cr
-Date: \tab 2015-10-07\cr
+Version: \tab 0.0.8.9000\cr
+Date: \tab 2015-10-19\cr
 License: \tab Apache License (== 2.0)\cr
 }
 }
